--- a/src/App.css
+++ b/src/App.css
@@ -101,3 +101,43 @@
   top: .4rem;
 }
 
+.Loading{
+  background-color: rgb(31, 26, 26);
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  z-index: 100;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+@keyframes Loader {
+  0%{
+    transform: scale(0);
+    opacity: 1;
+  }
+  100%{
+    transform: scale(1);
+    opacity: 0;
+  }
+}
+
+.Loader::after,
+.Loader::before {
+  animation: Loader 2s linear infinite;
+  content: '';
+  border: 2px solid #fff;
+  width: 78px;
+  height: 78px;
+  position: absolute;
+  border-radius: 50%;
+}
+
+.Loader::after{
+  opacity: 0;
+  animation-delay: 1s;
+}
+
