--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: black;
 }
 
 h1,
@@ -35,7 +36,6 @@ ul {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  
 }
 
 #Clouds {
