--- a/src/App.css
+++ b/src/App.css
@@ -107,15 +107,10 @@
 
 .Loading{
   background-color: rgb(31, 26, 26);
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   position: absolute;
-  z-index: 100;
   top: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 @keyframes Loader {
