ajuste de fondos

--- a/src/index.css
+++ b/src/index.css
@@ -39,61 +39,61 @@ ul {
 }
 
 #Clouds {
-  background-image: url(./src/image/clouds.jpeg);
+  background-image: url(./image/clouds.jpeg);
 }
 
 #Thunderstorm {
-  background-image: url(./src/image/Thunderstorm.jpg);
+  background-image: url(./image/Thunderstorm.jpg);
 }
 
 #Drizzle {
-  background-image: url(./src/image/Drizzle.jpg);
+  background-image: url(./image/Drizzle.jpg);
 }
 
 #Rain {
-  background-image: url(./src/image/Rain.jpg);
+  background-image: url(./image/Rain.jpg);
 }
 
 #Snow {
-  background-image: url(./src/image/Snow.jpg);
+  background-image: url(./image/Snow.jpg);
 }
 
 #Mist {
-  background-image: url(./src/image/Mist.jpg);
+  background-image: url(./image/Mist.jpg);
 }
 
 #Smoke {
-  background-image: url(./src/image/Smoke.jpg);
+  background-image: url(./image/Smoke.jpg);
 }
 
 #Haze {
-  background-image: url(./src/image/Haze.jpg);
+  background-image: url(./image/Haze.jpg);
 }
 
 #Dust {
-  background-image: url(./src/image/Dust.jpg);
+  background-image: url(./image/Dust.jpg);
 }
 
 #Fog {
-  background-image: url(./src/image/Fog.jpg);
+  background-image: url(./image/Fog.jpg);
 }
 
 #Sand {
-  background-image: url(./src/image/Sand.jpg);
+  background-image: url(./image/Sand.jpg);
 }
 
 #Ash {
-  background-image: url(./src/image/Ash.jpg);
+  background-image: url(./image/Ash.jpg);
 }
 
 #Squall {
-  background-image: url(./src/image/Squall.jpg);
+  background-image: url(./image/Squall.jpg);
 }
 
 #Tornado {
-  background-image: url(./src/image/Tornado.jpg);
+  background-image: url(./image/Tornado.jpg);
 }
 
 #Clear {
-  background-image: url(./src/image/Clear.jpg);
+  background-image: url(./image/Clear.jpg);
 }
