meroja de loader

--- a/src/App.css
+++ b/src/App.css
@@ -9,15 +9,16 @@
 
 .App__Container--Card{
   background-color: rgba(255, 255, 255, 0.6);
-  width: 90%;
+  width: 80%;
   max-width: 400px;
-  min-width: 370px;
+  min-width: 350px;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   border-radius: 1rem;
-  padding: 0 2rem;
+  padding: 0 1rem;
+  margin-right: .8rem;
 }
 
 .Card__Title--App{
@@ -104,13 +105,28 @@
   right: 2.3rem;
   top: .4rem;
 }
-
 .Loading{
-  background-color: rgb(31, 26, 26);
+  background-image: url(./assets/image/image-loader-bg.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
   width: 100%;
   height: 100%;
+  top: 0;
+
+}
+
+.Loading__Content{
+  background-image: url(./assets/image/image-loader2.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 300px;
+  width: 100vw;
+  height: 100vh;
   position: absolute;
   top: 0;
+  left: -.4rem;
 }
 
 @keyframes Loader {
@@ -128,11 +144,13 @@
 .Loader::before {
   animation: Loader 2s linear infinite;
   content: '';
-  border: 2px solid #fff;
-  width: 78px;
-  height: 78px;
+  border: 10px solid red;
+  width: 100px;
+  aspect-ratio: 1;
   position: absolute;
   border-radius: 50%;
+  top: calc(50% - 120px/2);
+  left: calc(50% - 120px/2);
 }
 
 .Loader::after{
